# BugsLife

./: Board.cpp  Board.h  Bug.cpp  Bug.h  CMakeLists.txt  Cell.cpp  Cell.h  Constants.h  Crawler.cpp  Crawler.h  Direction.h  DirectionToString.cpp  DirectionToString.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Hopper.cpp  Hopper.h  Jitter.cpp  Jitter.h  LineParser.cpp  LineParser.h  Menu.cpp  Menu.h  PathToString.cpp  PathToString.h  PrintBug.cpp  PrintBug.h  PrintCell.cpp  PrintCell.h  README.md  SuperBug.cpp  SuperBug.h  bugs-history.txt  bugs-results.txt  bugs.txt  main.cpp
